# tc2024

./: CMakeLists.txt  package.xml  readme.md
config/: config_localization.yaml  mcl_3dl.rviz
launch/: 1_init_robot_tc2024.launch  2-1_mapping_fastlio.launch  2-2_pcd_cleaning.launch  2-3_pcd_to_2dmap.launch  3-1_locarization_fastlio.launch  3-1_locarization_fastlio_1st.launch  3-1_locarization_fastlio_next.launch  3-1_mapping_fastlio_local.launch  3-2_locarization local.launch  3-2_locarization.launch  3_locarization.launch  4_run.launch  4_run_1st.launch  4_run_next.launch
scripts/: conditional_tf_publisher.py  del_point.py  gpt_frontcam_detector.py  mapping_launch.py  marge_lidar_data.py  navigator.py  navigator_logplotter.py  total_gui.py  waypoint_gui.py  waypoint_manager.py  waypoint_map_view.py
