<?xml version="1.0"?>
<package>
  <name>tc2024</name>
  <version>0.1.0</version>
  <description>tc2024</description>

  <maintainer email="nakaba_tokutoku@hotmail.com">Tatsuhiko Nakabayashi</maintainer>
  <license>BSD</license>
  <author email="nakaba_tokutoku@hotmail.com">Tatsuhiko Nakabayashi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ypspur_ros</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>ypspur_ros</run_depend>
  <run_depend>tf</run_depend>
</package>
